# aquarius

./: .gitignore  Dockerfile  Dockerfile.base  README.md  config.yaml  conftest.py  docker-compose.app.yml  keys.yaml.example  pyproject.toml  pytest.ini  run_tests.py  setup_env.sh
.github/: copilot-instructions.md
app/: config_manager.py  main.py  repo_management.py  settings.py  ui.py
app/agent/: agent.py  facade.py  graph.py  llm_client.py  nodes.py  prompts.py  state.py
app/agent/mcp/: github_server.py
app/agent/tools/code/: python.py
app/agent/tools/execution/: terminal.py
app/agent/tools/search/: arxiv.py  github.py  google.py  reddit.py
app/server/: chat.py  logs.py  models.py  routes.py  web_driver.py
app/server/agent/: agent.py  facade.py  llm_client.py  signatures.py
app/server/agent/tools/search/: arxiv.py  github.py  google.py
app/server/file/: annotator.py  processor.py
docs/: requirements.md  selenium.md
inference/: LLM_inference_lesson.ipynb  README.md  bench.sh  build.cmd  docker-compose.yml  request.json  test_cuda.bat
inference/grafana/provisioning/dashboards/: dashboards.yml  vllm.json
inference/nginx/: nginx.conf
inference/prometheus/: prometheus.yml
inference/vllm/: Dockerfile  run.cmd
inference/vllm/scripts/: run.sh
scripts/: install-ollama.sh  start-ollama.sh
services/: github_service.py  llm_client.py  local_repo_service.py  token_service.py
services/pipeline/: build_service.py  class_extractor.py  index_pipeline.py  repo_scanner.py  whoosh_index_service.py
tests/: conftest.py
tests/agent/: graph_test.py  test_graph.py
tests/server/: test_api_integration.py  test_graph_custom_prompt.py  test_integration_chat_summary.py  test_integration_summary_end_to_end.py
tests/server/agent/: llm_client_test.py
tests/server/agent/mcp/: test_github_server.py
tests/server/agent/tools/code/: facade.py
tests/server/agent/tools/search/: facade_test.py
tests/ui/: test_minimal_docker.py  test_selenium_chat.py
tests/unit/: conftest.py  test_config_manager.py  test_ui.py
tests/unit/agent/: test_facade.py  test_graph.py  test_llm_client.py
tests/unit/server/: test_chat.py  test_routes.py
ui/: chat_tab.py  index_explorer_tab.py  layout.py  repo_management_tab.py
