[tool.poetry]
name = "aquarius"
version = "0.1.0"
description = "A code assistant with chat interface, local LLM inference."
authors = ["Ivan Potapov <ivan.aufkl@gmail.com>"]
readme = "README.md"
packages = [
  { include = "app" }
]
include = ["config.yaml"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
gradio = "^5.29.0"
praw = "7.8.1"
html2text = "2024.2.26"
ollama = "0.4.7"
text-generation = "^0.7.0"
requests = "^2.32.3"
dspy = "^2.5.43"
whoosh = "^2.7.4"
flask = "^2.2.2"
pydantic = ">=2.7.4,<3.0.0"
flask-cors = "5.0.1"
langchain = "^0.3.20"
beautifulsoup4 = "^4.13.3"
selenium = "^4.30.0"
langchain-community = "^0.3.20"
langchain-ollama = "^0.3.2"
langgraph = "^0.4.1"
langchain-mcp-adapters = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
chromedriver-autoinstaller = "^0.5.4"

[tool.poetry.scripts]
aquarius = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=services --cov=app --cov-report=term-missing"